# advent-of-code

./: .env.sample  .gitignore  Taskfile.yml  pyproject.toml  request-input.py
aoc_utils/: io_utils.py
solutions/2022/1/: solution.py
solutions/2022/2/: solution.py
solutions/2022/3/: solution.py
solutions/2022/4/: solution.py
solutions/2022/5/: solution.py
solutions/2022/6/: solution.py
solutions/2022/8/: solution.py
