[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Ryan Tam <ryantam626@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
isort = "^5.10.1"
requests = "^2.28.1"
click = "^8.1.3"
ipython = "^8.7.0"
more-itertools = "^9.0.0"
numpy = "^1.23.5"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
